--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@ body {
   width: 300px;
   box-shadow: -2px 0 15px 5px rgba(10, 10, 10, 0.8);
 }
+
+
+
+#numbers {
+  margin: auto;
+  text-align:center;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  border:5px solid;
+  border-radius:10px;
+  background-color:white;
+  width:200px;
+  height:60px;    
+}
+
