--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ body {
 @keyframes xAxis2 {
   0% { left: 50% }
   50% { left: 90% }
-  100% { left: 50% }
+  100% { left: 50% } git push --set-upstream origin multiplicateur
+
 }
 
 @keyframes yAxis2 {
@@ -202,3 +203,4 @@ body {
   border-radius: 20px;
   cursor: pointer;
 }
+
