--- a/style.css
+++ b/style.css
@@ -202,3 +202,35 @@ body {
   border-radius: 20px;
   cursor: pointer;
 }
+.star{
+  width: 20%;
+  opacity: 0;
+  position : absolute;
+  bottom: 160px;
+  right: 100px; 
+  z-index: 4;
+}
+@keyframes falling{
+0%{
+  opacity: 1;
+  
+}
+50%{
+  opacity: 1;
+  transform: translate(-75px, -10px)
+}
+100%{opacity: 0;
+  transform: translate(-100px,150px)}
+}
+@keyframes falling2{
+  0%{
+    opacity: 1;
+    
+  }
+  50%{
+    opacity: 1;
+    transform: translate(75px, -10px)
+  }
+  100%{opacity: 0;
+    transform: translate(100px,150px)}
+  }
