--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 50%
+  top: 50%;
+  z-index: 2;
 }
 
 #bigCanvas {
@@ -201,4 +202,30 @@ body {
   border: 5px solid white;
   border-radius: 20px;
   cursor: pointer;
+  user-select: none;
+}
+
+.score-container {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  background-color: rgba(252, 142, 40, 0.884);
+  border-radius: 10px;
+  width: 200px;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: white;
+  padding: 5px;
+  user-select: none;
+}
+
+.score-container div {
+  display: flex;
+  align-items: center;
+}
+
+.score-container img {
+  height: 50px;
+  width: 50px;
 }
