--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body {
   justify-content: center;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   background-color: rgba(252, 142, 40, 0.884);
+  border: 5px solid rgb(255, 180, 67);
   border-radius: 10px;
   user-select: none;
 }
@@ -146,6 +147,7 @@ body {
   font-size: 22px;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   background-color: rgba(252, 142, 40, 0.884);
+  border: 5px solid rgb(255, 195, 105);
   padding: 5px 15px 5px 0;
   font-weight: 900;
   border-radius: 10px;
@@ -196,8 +198,8 @@ body {
 }
 
 @keyframes buttonRetry{
-  0% {opacity: 0}
-  100% {opacity: 0}
+  0% {opacity: 0; pointer-events: none}
+  100% {opacity: 0; pointer-events: initial}
 }
 .gif-retry button{
   opacity: 1;
@@ -211,6 +213,7 @@ body {
   border-radius: 20px;
   cursor: pointer;
   user-select: none;
+  outline: none;
 }
 
 .score-container {
@@ -219,6 +222,7 @@ body {
   left: 30px;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   background-color: rgba(252, 142, 40, 0.884);
+  border: 5px solid rgb(255, 195, 105);
   border-radius: 10px;
   width: 200px;
   font-family: sans-serif;
@@ -294,11 +298,6 @@ ul {
   cursor: pointer;
 }
 
-#chrono {
-  display: flex;
-  justify-content: center;
-}
-
 .arrow {
   transform: rotateY(180deg)
 }
@@ -344,28 +343,46 @@ ul {
 
 .bonus-container > img {
   position: absolute;
-  bottom: 70px;
+  bottom: 40px;
   transform: translate(-50%);
   left: 50%;
-  height: 200px;
+  height: 25vh;
   opacity: 0.8;
 }
 
 .bonus-container > p {
   position: absolute;
-  bottom: 80px;
+  bottom: 50px;
   transform: translate(-30%);
   left: 50%;
   color: white;
   font-family: 'Quicksand', sans-serif;
-  font-size: 50px;
+  font-size: 7vh;
   font-weight: 700
+}
+
+#chrono > img {
+  height: 30px;
+}
+
+.chrono {
+  background-color: rgba(255, 0, 85, 0.7) !important;
+}
+
+.disabled-red {
+  background-color: rgba(255, 89, 144, 0.7) !important;
 }
 
 .disabled {
   cursor: default;
   background-color: rgba(109, 142, 212, 0.884) !important;
 }
+
+.disabled-orange {
+  cursor: default;
+  background-color: rgba(255, 198, 145, 0.884) !important;
+}
+
 #freelife{
   width:50%;
   opacity: 0;
@@ -381,3 +398,29 @@ ul {
   opacity:0;}
  
   }
+
+.speaker {
+  position: absolute;
+  transform: translate(0) !important;
+  left: 10px !important;
+  bottom: 10px !important;
+  height: 40px !important;
+}
+
+.black-window {
+  height: 100vh;
+  width: 100vw;
+  z-index: -5;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes blackWindow {
+  0% {z-index: 10; background-color: rgba(0, 0, 0, 0);}
+  100% {z-index: 10; background-color: rgba(0, 0, 0, 1);}
+}
+
+.play-again-selected {
+  background: linear-gradient(45deg, rgb(255, 149, 28), rgb(255, 201, 23)) !important;
+}
